ecmascript/parser/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral2/input.ts.stderr
error[1085]: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral2/input.ts:2:1
  |
2 | 01
  | ^^

